tests/test-build/tests/common/arch/fail-literal-not-string.stderr
error[E0565]: literal in `cfg` predicate value must be a string
 --> tests/common/arch/fail-literal-not-string.rs:3:8
  |
3 |     if 0 {
  |        ^
